<resources>
    <string name="app_name">EZPark</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login_id">Login ID</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="back_title">Back Title</string>
    <string name="back_arrow">back_arrow</string>
    <string name="tab_title_one">Parking Owner Info</string>
    <string name="tab_title_two">Parking Lot Info</string>
    <string name="owner_name">Owner Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="contact_details">Contact Details</string>
    <string name="cnic_passport">CNIC/Passport</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="personal_details">Personal Details</string>
    <string name="welcome_to_admin_dashboard">Welcome to \nAdmin Dashboard</string>
    <string name="background_cover">Background Cover</string>
    <string name="profile_image">Profile Image</string>
    <string name="add_owner">Add Owner</string>

    <string name="error_required_field">This field is required</string>
    <string name="error_required_image">Image is required, select image from gallery</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_select_gender">Please select a gender</string>
    <string name="camera">Camera</string>
    <string name="select">Select</string>
    <string name="gallery">Gallery</string>

</resources>