<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:id="@+id/selectionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/select"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/baseline_clear_24"
        android:background="@drawable/round_corners_bg"
        android:backgroundTint="#4DFF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/selectionText"
        app:layout_constraintBottom_toBottomOf="@id/selectionText"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/onCameraCV"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="18dp"
        app:strokeColor="@color/transparent"
        android:layout_marginBottom="10dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/onGalleryCV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectionText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/onGalleryCV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectionText">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/camera_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_round_bg"
                android:backgroundTint="@color/colorPrimaryVariant"
                android:fontFamily="@font/open_sans"
                android:padding="7sp"
                android:text="@string/camera"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/next_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/onGalleryCV"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="10dp"
        app:strokeColor="@color/transparent"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/onCameraCV"
        app:layout_constraintTop_toBottomOf="@id/selectionText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/onCameraCV"
            app:layout_constraintTop_toBottomOf="@id/selectionText">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gallery_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_round_bg"
                android:backgroundTint="@color/colorPrimaryVariant"
                android:fontFamily="@font/open_sans"
                android:padding="7sp"
                android:text="@string/gallery"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/next_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>